--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -25,14 +25,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get changed files in Lessons and Homework folders
+      - name: Get all the changed files
         id: changed-files
         uses: tj-actions/changed-files@v42
         # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
         with:
           since_last_remote_commit: true
 
-      - name: List all changed files
+      - name: Print all the changed files
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
