--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -37,10 +37,15 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
       - name: Testing Python files
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             # Check for Python solution files
-            if [[ $file == *solution.py ]]; then
+            if [[ $file == *.py ]]; then
                 echo "Testing $file"
-                python ../scripts/python_testing.py $file
+                pytest $file
