Adds if and done

--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -49,3 +49,5 @@ jobs:
             if [[ $file == *.py ]]; then
                 echo "Testing $file"
                 pytest $file
+            fi
+          done
