--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Check for Jupyter notebook solutions in the PR.
         run: |
-          if [[ $(grep -E "*solution.ipynb" ${{ steps.changed-files.outputs.all_changed_files }}) ]]; then
+          if [[ ${{ steps.changed-files.outputs.all_changed_files }} =~ .*\.ipynb ]]; then
             echo "Jupyter notebooks found in the PR."
           else
             echo "No Jupyter notebooks found in the PR."
