--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Checks for Python files in the PR.
         run: |
-          if [[ $(grep -E "*solution.py" ${{ steps.changed-files.outputs.all_changed_files }}) ]]; then
+          if [[ ${{ steps.changed-files.outputs.all_changed_files }} =~ .*\.py] ]; then
             echo "Python solution files found in the PR."
           else
             echo "No Python solution files found in the PR."
