Updstes python yaml file

--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -34,12 +34,14 @@ jobs:
 
       - name: Checks for Python files in the PR.
         run: |
-          if [[ ${{ steps.changed-files.outputs.all_changed_files }} =~ .*\.py] ]; then
-            echo "Python solution files found in the PR."
-          else
-            echo "No Python solution files found in the PR."
+          for file in  ${{ steps.changed-files.outputs.all_changed_files }}; do
+            if [[ $file == *.py ]]; then
+              echo "Python solution files found in the PR."
+            else
+              echo "No Python solution files found in the PR."
             exit 0
           fi
+
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -51,7 +53,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
-      - name: Testing Python files
+      - name: Testing Python solution files
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             # Check for Python solution files
