--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Checks for Python files in the PR.
         run: |
-          if [[ ${{ steps.changed-files.outputs.all_changed_files }} == *.py] ]; then
+          if [[ ${{ steps.changed-files.outputs.all_changed_files }} =~ .*\.py ]]; then
             echo "Python solution files found in the PR."
           else
             echo "No Python solution files found in the PR."
-            exit 0
+            exit 1
           fi
 
       - name: Set up Python 3.10
