--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -40,6 +40,27 @@ jobs:
             echo "No Python solution files found in the PR."
           fi
 
+  test:
+    name: Test Python Files
+    needs: build
+    runs-on: ubuntu-latest
+    # Required permissions to run the action
+    permissions:
+      contents: read
+      pull-requests: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get all the changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v42
+        # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
+        with:
+          since_last_remote_commit: true
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
