--- a/.github/workflows/test-python-files.yml
+++ b/.github/workflows/test-python-files.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           if echo "${{ steps.changed-files.outputs.all_changed_files }}" | grep -q "\.py$"; then
             echo "Python solution files found in the PR."
+            exit 0
           else
             echo "No Python solution files found in the PR."
           fi
@@ -43,6 +44,7 @@ jobs:
   test:
     name: Test Python Files
     needs: build
+    if: needs.build.result == 'success'
     runs-on: ubuntu-latest
     # Required permissions to run the action
     permissions:
