--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -9,15 +9,19 @@ on:
     #   # - 'dev-**'
 
 jobs:
-  build-docs:
-    name: Jupyter-Notebook-QA
+  check:
+    name: Checkout repository code
     runs-on: ubuntu-latest
+    outputs:
+      jn-files-found: ${{ steps.check-jn-files-found.outputs.jn_files_found }}
     defaults:
       run:
         shell: bash -l {0}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Get all the changed files
         id: changed-files
@@ -27,14 +31,36 @@ jobs:
           since_last_remote_commit: true
 
       - name: Check for Jupyter notebook solutions in the PR.
+        id: check-jn-files-found
         run: |
           if echo "${{ steps.changed-files.outputs.all_changed_files }}" | grep -q "\.ipynb$"; then
             echo "Jupyter notebooks found in the PR."
+            echo "{jn_files_found}={true}" >> $GITHUB_OUTPUT
           else
             echo "No Jupyter notebooks found in the PR."
+            echo "{jn_files_found}={false}" >> $GITHUB_OUTPUT
           fi
 
-    # See: https://github.com/marketplace/actions/setup-miniconda
+  test:
+    name: Test Jupyter notebooks
+    runs-on: ubuntu-latest
+    needs: check
+    if: needs.check.outputs.jn-files-found == 'true'
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get all the changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v42
+        # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
+        with:
+          since_last_remote_commit: true
+
+      # See: https://github.com/marketplace/actions/setup-miniconda
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
