--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           if echo "${{ steps.changed-files.outputs.all_changed_files }}" | grep -q "\.ipynb$"; then
             echo "Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={true}" >> $GITHUB_ENV
+            exit 1
           else
             echo "No Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={false}" >> $GITHUB_ENV
+            exit 0
           fi
 
   test:
