--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -28,32 +28,35 @@ jobs:
         with:
           since_last_remote_commit: true
 
-      # See: https://github.com/marketplace/actions/setup-miniconda
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-update-conda: true
-          miniforge-variant: Mambaforge
-          channels: conda-forge
-          activate-environment: dev
-          environment-file: env_files/environment.yml
-          use-mamba: true
+      # # See: https://github.com/marketplace/actions/setup-miniconda
+      # - name: Setup Miniconda
+      #   uses: conda-incubator/setup-miniconda@v3
+      #   with:
+      #     auto-update-conda: true
+      #     miniforge-variant: Mambaforge
+      #     channels: conda-forge
+      #     activate-environment: dev
+      #     environment-file: env_files/environment.yml
+      #     use-mamba: true
 
-      - name: Build environment
-        run:
-          conda activate dev
+      # - name: Build environment
+      #   run:
+      #     conda activate dev
 
       - name: Run script to test Jupyter notebooks
         run: |
-          working_directory=C:\GitHub-Actions-Playground
+          github_directory=/home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
           # Check for Juptyer notebook solution files.
             if [[ $file == *solution.ipynb ]]; then
                 echo "Testing $file"
                 # Get the path to the directory containing the notebook.
                 dir_path=$(dirname $file)
+                echo "Directory path: $dir_path"
+                base_path=${dir_path#$github_directory}
+                echo "Base path: $base_path"
                 # Navigate to the directory containing the notebook.
-                cd $dir_path
+                cd $base_path
                 # Run the notebook.
                 python ../scripts/jn_test.py
             fi
