Adds cd to Lessons folder

--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -50,9 +50,9 @@ jobs:
             if [[ $file == *solution.ipynb ]]; then
                 echo "Testing $file"
                 # Get the path to the directory containing the notebook.
-                dir_path=$(dirname $file)
+                # dir_path=$(dirname $file)
                 # Navigate to the directory containing the notebook.
-                cd $dir_path
+                cd Lessons
                 # Run the notebook.
                 python ../scripts/jn_test.py
             fi
