--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -33,18 +33,18 @@ jobs:
       - name: Check for Jupyter notebook solutions in the PR.
         id: check-jn-files-found
         run: |
-          if grep -q ".ipynb" <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
+          if grep -q ".ipynb " <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
             echo "Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={true}" >> $GITHUB_ENV
+            echo "{jn-files-found=true}" >> $GITHUB_ENV
           else
             echo "No Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={false}" >> $GITHUB_ENV
+            echo "{jn-files-found=false}" >> $GITHUB_ENV
           fi
 
   test:
     name: Test Jupyter notebooks
     needs: check
-    if: ${{needs.check.outputs.jn-files-found == 'true' }}
+    if: ${{ $jn-files-found == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
