--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -44,10 +44,9 @@ jobs:
   test:
     name: Test Jupyter notebooks
     needs: check
-    env:
-      jn-files-found: ${{ needs.check.outputs.jn-files-found }}
-    if: ${{ env.jn-files-found == 'true'}}
     runs-on: ubuntu-latest
+    run: echo "The value of jn-files-found is ${{ needs.check.outputs.jn-files-found }}"
+    if: ${{ needs.check.outputs.jn-files-found == 'true' }}
 
     steps:
       - name: Check out repository code
