--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           if grep -q ".ipynb " <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
             echo "Jupyter notebooks found in the PR."
-            echo "{jn-files-found=true}" >> $GITHUB_OUTPUT
+            echo "jn-files-found=true" >> $GITHUB_OUTPUT
           else
             echo "No Jupyter notebooks found in the PR."
-            echo "{jn-files-found=false}" >> $GITHUB_OUTPUT
+            echo "jn-files-found=false" >> $GITHUB_OUTPUT
           fi
 
   test:
