add back if check

--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -46,12 +46,9 @@ jobs:
     needs: check
     runs-on: ubuntu-latest
     
-    # if: ${{ needs.check.outputs.jn-files-found == 'true' }}
+    if: ${{ needs.check.outputs.jn-files-found == 'true' }}
 
     steps:
-      - name: echo the value of jn-files-found
-        run: echo "The value of jn-files-found is ${{ needs.check.outputs.jn-files-found }}"
-
       - name: Check out repository code
         uses: actions/checkout@v4
         with:
