--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Check for Jupyter notebook solutions in the PR.
         id: check-jn-files-found
         run: |
-          if echo "${{ steps.changed-files.outputs.all_changed_files }}" | grep -q "\.ipynb$"; then
-            echo "Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={true}" >> $GITHUB_ENV
+          if grep -q "solution.ipynb" <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
+            echo "Jupyter notebook solutions are in the PR."
+            echo "jn-files-found:=true" >> $GITHUB_ENV
           else
-            echo "No Jupyter notebooks found in the PR."
-            echo "{jn-files-found:}={false}" >> $GITHUB_ENV
+            echo "There are no Jupyter notebook solutions found in the PR."
+            echo "jn-files-found=false" >> $GITHUB_ENV
           fi
 
   test:
@@ -52,13 +52,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Get all the changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v42
-        # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
-        with:
-          since_last_remote_commit: true
 
       # See: https://github.com/marketplace/actions/setup-miniconda
       - name: Setup Miniconda
