--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           if grep -q "solution.ipynb" <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
             echo "Jupyter notebook solutions are in the PR."
-            echo "jn-files-found:=true" >> $GITHUB_ENV
+            echo "{jn-files-found}={true}" >> $GITHUB_ENV
           else
             echo "There are no Jupyter notebook solutions found in the PR."
-            echo "jn-files-found=false" >> $GITHUB_ENV
+            echo "{jn-files-found}={false}" >> $GITHUB_ENV
           fi
 
   test:
