--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -35,17 +35,17 @@ jobs:
         run: |
           if grep -q "solution.ipynb" <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
             echo "Jupyter notebook solutions are in the PR."
-            echo "{jn-files-found}={true}" >> $GITHUB_ENV
+            echo "jn-files-found=true" >> $GITHUB_OUTPUT
           else
             echo "There are no Jupyter notebook solutions found in the PR."
-            echo "{jn-files-found}={false}" >> $GITHUB_ENV
+            echo "jn-files-found=false" >> $GITHUB_OUTPUT
           fi
 
   test:
     name: Test Jupyter notebooks
-    needs: check
-    if: needs.check.outputs.jn-files-found == 'true'
     runs-on: ubuntu-latest
+    needs: check
+    if: ${{ success() }}
 
     steps:
       - name: Check out repository code
@@ -55,6 +55,8 @@ jobs:
 
       # See: https://github.com/marketplace/actions/setup-miniconda
       - name: Setup Miniconda
+        needs: check
+
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
