--- a/.github/workflows/jupyter_notebook_test-2.yml
+++ b/.github/workflows/jupyter_notebook_test-2.yml
@@ -36,13 +36,16 @@ jobs:
           if grep -q "solution.ipynb" <<< "${{ steps.changed-files.outputs.all_changed_files }}"; then
             echo "Jupyter notebook solutions are in the PR."
             echo "jn-files-found=true" >> $GITHUB_OUTPUT
+          else
+            echo "There are no Jupyter notebook solutions found in the PR."
+            echo "jn-files-found=false" >> $GITHUB_OUTPUT
           fi
 
   test:
     name: Test Jupyter notebooks
     runs-on: ubuntu-latest
     needs: check
-    if: ${{ success() }}
+    if: ${{ true }}
 
     steps:
       - name: Check out repository code
