--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -82,8 +82,11 @@ jobs:
           # Check for Python solution files
             if [[ $file == *solution.ipynb ]]; then
                 echo "Testing $file"
-                cd $file
-                cd ../
+                gh_runner_path="/home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/"
+                relative_path="${file#$gh_runner_path}"
+                directory_path="$(dirname "$relative_path")"
+                echo "Directory path: $directory_path"
+                cd "$directory_path"
                 python ../scripts/jn_test.py
             fi
           done
