--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -86,7 +86,7 @@ jobs:
                 relative_path="${file#$gh_runner_path}"
                 directory_path="$(dirname "$relative_path")"
                 echo "Directory path: $directory_path"
-                cd "$directory_path"
-                python ../scripts/jn_test.py
+                cd $directory_path
+                python ../../../../../../scripts/jn_test.py
             fi
           done
