--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -81,8 +81,10 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
           # Check for Python solution files in directories containing "Lessons"
             if [[ $file == *solution.ipynb && $file == *Lessons* ]]; then
+              run |
               ../scripts/lessons_jn_test.sh "${{ steps.changed-files.outputs.all_changed_files }}"
             else
+              run |
               ../scripts/homework_jn_test.sh "${{ steps.changed-files.outputs.all_changed_files }}"
             fi
           done
