--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -81,18 +81,10 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
           # Check for Python solution files in directories containing "Lessons"
             if [[ $file == *solution.ipynb && $file == *Lessons* ]]; then
-              bash ../scripts/lessons_jn_test.sh "${file}"
+              echo "Testing $file"
+              # bash ../scripts/lessons_jn_test.sh "${file}"
             else
-              bash ../scripts/homework_jn_test.sh "${file}"
+              echo "Testing $file"
+              # bash ../scripts/homework_jn_test.sh "${file}"
             fi
           done
-          #       echo "Testing $file"
-          #       gh_runner_path="/home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/"
-          #       relative_path="${file#$gh_runner_path}"
-          #       directory_path="$(dirname "$relative_path")"
-          #       echo "Directory path: $directory_path"
-          #       cd $directory_path
-          #       python ../../../../../../scripts/jn_test.py
-          #       cd ../../../../../../
-          #   fi
-          # done
