--- a/.github/workflows/jupyter_notebook_test.yml
+++ b/.github/workflows/jupyter_notebook_test.yml
@@ -82,9 +82,9 @@ jobs:
           # Check for Python solution files in directories containing "Lessons"
             if [[ $file == *Lessons* ]]; then
               echo "Testing Lesson: $file"
-              # bash /home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/scripts/lessons_jn_test.sh "${file}"
+              bash /home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/scripts/lessons_jn_test.sh "${file}"
             else
               echo "Testing Homework: $file"
-              # bash /home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/scripts/homework_jn_test.sh "${file}"
+              bash /home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/scripts/homework_jn_test.sh "${file}"
             fi
           done
